[tool.poetry]
name = "mellow_strategy_sdk"
version = "0.1.1"
description = "Framework for creating new Uniswap V3 strategies"
readme = 'README.rst'
documentation = 'https://mellow-strategy-sdk.readthedocs.io/en/main/'

authors = [
    "Alex K <ak@mellow.finance>",
    "Alexander Nikolaev <alexandernikolaev@mellow.finance>",
    "David Prokhorov <davidprokhorov@mellow.finance>"
]
license = "MIT License"
homepage = 'https://mellow.finance/'
repository = 'https://github.com/mellow-finance/mellow-strategy-sdk'
packages = [
    {include = "mellow_sdk"}
]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
kaleido = "0.2.1"
pandas = "^1.4.3"
plotly = "^5.5.0"
PyYAML = "^3.13"
pyarrow = "^6.0.1"
boto3 = "^1.0.0"
polars = "0.13.17"
structlog = "^21.5.0"
python-binance = "^1.0.15"
six = "~1.15.0"
folium = "0.2.1"
arviz = "^0.12.0"

sphinx = {version = "^4", optional = true}
sphinx-rtd-theme = {version="^1.0.0", optional = true}
autodoc = {version="^0.5.0", optional = true}
sphinx-autodocgen = {version="^1.3", optional = true}
sphinxcontrib-napoleon = {version="^0.7", optional = true}
myst-parser = {version="^0.17.0", optional = true}
sphinx-autodoc-typehints = {version="^1.17.0", optional = true}
tqdm = "^4.64.0"
scipy = "^1.9.1"
cachetools = "^5.2.0"
certifi = "^2022.6.15"
charset-normalizer = "^2.1.1"
google-api-core = "^2.10.0"
google-auth = "^2.11.0"
google-cloud-bigquery = "^3.3.2"
google-cloud-bigquery-storage = "^2.15.0"
google-cloud-core = "^2.3.2"
google-crc32c = "^1.5.0"
google-resumable-media = "^2.3.3"
googleapis-common-protos = "^1.56.4"
grpcio = "^1.48.1"
grpcio-status = "^1.48.1"
idna = "^3.3"
numpy = "^1.23.2"
packaging = "^21.3"
proto-plus = "^1.22.1"
protobuf = "^4.21.5"
pyasn1 = "^0.4.8"
pyasn1-modules = "^0.2.8"
pyparsing = "^3.0.9"
python-dateutil = "^2.8.2"
pytz = "^2022.2.1"
requests = "^2.28.1"
rsa = "^4.9"
typing-extensions = "^4.3.0"
urllib3 = "^1.26.12"
db-dtypes = "^1.0.3"

[tool.poetry.dev-dependencies]
parameterized = "^0.8.1"

[tool.poetry.extras]
docs = [
    "sphinx", "parameterized", "sphinx-rtd-theme", "autodoc",
    "sphinx-autodocgen", "sphinxcontrib-napoleon", "myst-parser",
    "sphinx-autodoc-typehints"
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
